--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
 	.project-boxes{
 		max-width: 200px;
 		max-height: 200px;
+		display: inline-block;
 	}
 
 	@media (max-width: 700px){
@@ -261,6 +262,14 @@
 		<p><a class="contentlinks" href="/projects/koloni">Koloni</a>&mdash;Branding and UI design for a concept microfinance app.</p> -->
 
 		<h3>Printed Work</h3>
+		<div class="project-boxes">
+			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/ben-franklin-icon.gif">
+			<p class="mini"><a href="/projects/american-classics/" class="contentlinks">An Anthology of American Classics</a></p>
+		</div>
+		<div class="project-boxes">
+			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/ben-franklin-icon.gif">
+			<p class="mini"><a href="/projects/american-classics/" class="contentlinks">An Anthology of American Classics</a></p>
+		</div>
 		<div class="project-boxes">
 			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/ben-franklin-icon.gif">
 			<p class="mini"><a href="/projects/american-classics/" class="contentlinks">An Anthology of American Classics</a></p>
