--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/ben-franklin-icon.gif">
 			<p class="mini"><a href="/projects/american-classics/" class="contentlinks">An Anthology of American Classics</a></p>
 		</div>
-		<div class="project-boxes">
+		<div class="project-boxes" style="margin: 0 50px;">
 			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/ben-franklin-icon.gif">
 			<p class="mini"><a href="/projects/american-classics/" class="contentlinks">An Anthology of American Classics</a></p>
 		</div>
