--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 	}
 	.mini{
 		font-size: 0.6em;
-		line-height: 0.8em;
+		line-height: 1.5em;
 	}
 
 	.image-responsive{
@@ -253,11 +253,20 @@
 
 		<h3>Coded Work &nbsp;<span class="mini"><a class="contentlinks" href="http://bl.ocks.org/AGdelaX">Check out my gists!</a></span></h3>
 
+		<div class="project-boxes">
+			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/pikachu-icon.gif">
+			<p class="mini"><a href="/projects/divpixels/" class="contentlinks">divPixels</a></p>
+		</div>
+		<div class="project-boxes" style="margin: 0 50px;">
+			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/white-with-red-icon.gif">
+			<p class="mini"><a href="/projects/white-with-red/" class="contentlinks">White with Red</a></p>
+		</div>
+
 		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/divpixels.gif" class="image-responsive"> -->
-		<p><a class="contentlinks" href="/projects/divpixels/">divPixels</a>&mdash;A free to use, browser-based pixel art tool for quickly developing pixel drawings.</p>
+		<!-- <p><a class="contentlinks" href="/projects/divpixels/">divPixels</a>&mdash;A free to use, browser-based pixel art tool for quickly developing pixel drawings.</p> -->
 
 		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/white-with-red.gif" class="image-responsive"> -->
-		<p><a class="contentlinks" href="/projects/whitewithred/">White with Red</a>&mdash;A series of illustrations and web animations based on the short horror story of the same name.</p>
+		<!-- <p><a class="contentlinks" href="/projects/whitewithred/">White with Red</a>&mdash;A series of illustrations and web animations based on the short horror story of the same name.</p> -->
 
 		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/koloni.gif" class="image-responsive">
 		<p><a class="contentlinks" href="/projects/koloni">Koloni</a>&mdash;Branding and UI design for a concept microfinance app.</p> -->
@@ -268,12 +277,12 @@
 			<p class="mini"><a href="/projects/american-classics/" class="contentlinks">An Anthology of American Classics</a></p>
 		</div>
 		<div class="project-boxes" style="margin: 0 50px;">
-			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/ben-franklin-icon.gif">
-			<p class="mini"><a href="/projects/american-classics/" class="contentlinks">An Anthology of American Classics</a></p>
+			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/uss-maine-icon.gif">
+			<p class="mini"><a href="/projects/uss-maine/" class="contentlinks">USS Maine Memorial Booklet</a></p>
 		</div>
 		<div class="project-boxes">
-			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/ben-franklin-icon.gif">
-			<p class="mini"><a href="/projects/american-classics/" class="contentlinks">An Anthology of American Classics</a></p>
+			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arroz-icon.gif">
+			<p class="mini"><a href="/projects/arroz-blanco/" class="contentlinks">Arroz Blanco</a></p>
 		</div>
 
 		<!-- <p><a class="contentlinks" href="/projects/american-classics/">An Anthology of American Classics</a>&mdash;Four works of classic American literature designed and bound into one volume.</p>
