--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 			<p class="mini"><a href="/projects/american-classics/" class="contentlinks">An Anthology of American Classics</a></p>
 		</div>
 		<div class="project-boxes" style="margin: 0 50px;">
-			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/uss-maine-icon.gif">
+			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/uss-maine-icon.jpg">
 			<p class="mini"><a href="/projects/uss-maine/" class="contentlinks">USS Maine Memorial Booklet</a></p>
 		</div>
 		<div class="project-boxes">
