--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
 	}
 
 	.project-boxes{
-		max-width: 200px;
-		max-height: 200px;
+		max-width: 100%;
+		max-height: 100%;
 		display: inline-block;
 	}
 
