--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 		<h3>Printed Work</h3>
 		<div class="project-boxes">
 			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/ben-franklin-icon.gif">
-			<p class="mini"><a href="/projects/american-classics/" class="contentlinks">Anthology of American Classics</a></p>
+			<p class="mini"><a href="/projects/american-classics/" class="contentlinks">American Classics</a></p>
 		</div>
 		<div class="project-boxes" style="margin: 0 50px;">
 			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/uss-maine-icon.jpg">
