--- a/index.html
+++ b/index.html
@@ -175,8 +175,12 @@
 		display: none;
 	}
 	.mini{
-		font-size: 0.6em;
+		font-size: 0.8em;
 		line-height: 1.5em;
+	}
+
+	#gists{
+		font-size: 0.6em;
 	}
 
 	.image-responsive{
@@ -251,7 +255,7 @@
 		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/alice-crm.gif" class="image-responsive"> -->
 		<p><a class="contentlinks" href="/projects/alice-crm/">Alice Concierge CRM</a>&mdash;A customer relationship management system designed for hotel concierge as a part of Alice's backend hotel management solution.</p>
 
-		<h3>Coded Work &nbsp;<span class="mini"><a class="contentlinks" href="http://bl.ocks.org/AGdelaX">Check out my gists!</a></span></h3>
+		<h3>Coded Work &nbsp;<span id="gists"><a class="contentlinks" href="http://bl.ocks.org/AGdelaX">Check out my gists!</a></span></h3>
 
 		<div class="project-boxes">
 			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/pikachu-icon.gif">
