--- a/index.html
+++ b/index.html
@@ -193,6 +193,10 @@
 		display: inline-block;
 	}
 
+	.project-boxes-middle{
+		margin: 0 50px;
+	}
+
 	@media (max-width: 700px){
 		#scroll-down{
 			left: auto;
@@ -210,6 +214,10 @@
 		.dash{
 			display: none;
 		}
+
+		.project-boxes-middle{
+		margin: 0;
+	}
 
 	}
 	</style>
@@ -261,7 +269,7 @@
 			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/pikachu-icon.gif">
 			<p class="mini"><a href="/projects/divpixels/" class="contentlinks">divPixels</a></p>
 		</div>
-		<div class="project-boxes" style="margin: 0 50px;">
+		<div class="project-boxes-middle">
 			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/white-with-red-icon.gif">
 			<p class="mini"><a href="/projects/white-with-red/" class="contentlinks">White with Red</a></p>
 		</div>
@@ -280,9 +288,9 @@
 			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/ben-franklin-icon.gif">
 			<p class="mini"><a href="/projects/american-classics/" class="contentlinks">American Classics</a></p>
 		</div>
-		<div class="project-boxes" style="margin: 0 50px;">
+		<div class="project-boxes-middle">
 			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/uss-maine-icon.jpg">
-			<p class="mini"><a href="/projects/uss-maine/" class="contentlinks">USS Maine Memorial Booklet</a></p>
+			<p class="mini"><a href="/projects/uss-maine/" class="contentlinks">USS Maine Booklet</a></p>
 		</div>
 		<div class="project-boxes">
 			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arroz-icon.gif">
