--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 		</div>
 		<div class="project-boxes-middle">
 			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/white-with-red-icon.gif">
-			<p class="mini"><a href="/projects/white-with-red/" class="contentlinks">White with Red</a></p>
+			<p class="mini"><a href="/projects/whitewithred/" class="contentlinks">White with Red</a></p>
 		</div>
 
 		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/divpixels.gif" class="image-responsive"> -->
