--- a/index.html
+++ b/index.html
@@ -270,11 +270,11 @@
 		<h3>Coded Work &nbsp;<span id="gists"><a class="contentlinks" href="http://bl.ocks.org/AGdelaX">Check out my gists!</a></span></h3>
 
 		<div class="project-boxes">
-			<a href="/projects/divpixels/" class="contentlinks"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/pikachu-icon.gif"></a>
+			<a href="/projects/divpixels/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/pikachu-icon.gif"></a>
 			<p class="mini"><a href="/projects/divpixels/" class="contentlinks">divPixels</a></p>
 		</div>
 		<div class="project-boxes-middle">
-			<a href="/projects/whitewithred/" class="contentlinks"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/white-with-red-icon.gif"></a>
+			<a href="/projects/whitewithred/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/white-with-red-icon.gif"></a>
 			<p class="mini"><a href="/projects/whitewithred/" class="contentlinks">White with Red</a></p>
 		</div>
 
@@ -289,15 +289,15 @@
 
 		<h3>Printed Work</h3>
 		<div class="project-boxes">
-			<a href="/projects/american-classics/" class="contentlinks"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/ben-franklin-icon.gif"></a>
+			<a href="/projects/american-classics/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/ben-franklin-icon.gif"></a>
 			<p class="mini"><a href="/projects/american-classics/" class="contentlinks">American Classics</a></p>
 		</div>
 		<div class="project-boxes-middle">
-			<a href="/projects/uss-maine/" class="contentlinks"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/uss-maine-icon.jpg"></a>
+			<a href="/projects/uss-maine/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/uss-maine-icon.jpg"></a>
 			<p class="mini"><a href="/projects/uss-maine/" class="contentlinks">USS Maine Booklet</a></p>
 		</div>
 		<div class="project-boxes">
-			<a href="/projects/arroz-blanco/" class="contentlinks"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arroz-icon.gif"></a>
+			<a href="/projects/arroz-blanco/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arroz-icon.gif"></a>
 			<p class="mini"><a href="/projects/arroz-blanco/" class="contentlinks">Arroz Blanco</a></p>
 		</div>
 
