--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/alice-crm.gif" class="image-responsive"> -->
 		<p><a class="contentlinks" href="/projects/alice-crm/">Alice Concierge CRM</a>&mdash;A customer relationship management system designed for hotel concierge as a part of Alice's backend hotel management solution.</p>
 
-		<h3>Coded Work&mdash;<span id="gists"><a class="contentlinks" href="http://bl.ocks.org/AGdelaX">Check out my gists</a></span></h3>
+		<h3>Coded Work<span id="gists"><a class="contentlinks" href="http://bl.ocks.org/AGdelaX">&mdash;Check out my gists.</a></span></h3>
 
 		<div class="project-boxes">
 			<a href="/projects/divpixels/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/pikachu-icon.gif"></a>
