--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	#content {
     position:relative; 
     top:105%; 
-    max-width: 750px;
+    max-width: 99%;
     margin: auto;
     font-size: 1.5em;
     padding: 0 15px 30px 15px;
