--- a/index.html
+++ b/index.html
@@ -196,12 +196,12 @@
 		display: inline-block;
 	}
 
-	.project-boxes-middle{
+	/*.project-boxes-middle{
 		max-width: 200px;
 		max-height: 100%;
 		display: inline-block;
 		margin: 0 65px;
-	}
+	}*/
 
 	#first-paragraph{
 		font-size: 2em; 
@@ -226,9 +226,9 @@
 			display: none;
 		}
 
-		.project-boxes-middle{
+		/*.project-boxes-middle{
 		margin: 0;
-	}
+	}*/
 	#first-paragraph{
 		font-size: 1em; 
 		line-height: 1.7em;
