--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 			<a href="/projects/divpixels/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/pikachu-icon.gif"></a>
 			<p class="mini"><a href="/projects/divpixels/" class="contentlinks">divPixels</a></p>
 		</div>
-		<div class="project-boxes-middle">
+		<div class="project-boxes">
 			<a href="/projects/whitewithred/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/white-with-red-icon.gif"></a>
 			<p class="mini"><a href="/projects/whitewithred/" class="contentlinks">White with Red</a></p>
 		</div>
@@ -303,7 +303,7 @@
 			<a href="/projects/american-classics/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/ben-franklin-icon.gif"></a>
 			<p class="mini"><a href="/projects/american-classics/" class="contentlinks">American Classics</a></p>
 		</div>
-		<div class="project-boxes-middle">
+		<div class="project-boxes">
 			<a href="/projects/uss-maine/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/uss-maine-icon.jpg"></a>
 			<p class="mini"><a href="/projects/uss-maine/" class="contentlinks">USS Maine Booklet</a></p>
 		</div>
