--- a/index.html
+++ b/index.html
@@ -221,6 +221,9 @@
 	#lower-content{
 		background-color: black;
 		color: white;
+		width: 100%;
+		padding: 0;
+		margin: 0;
 	}
 
 	@media (max-width: 700px){
@@ -282,7 +285,10 @@
 	<div id="content">
 		<p id="first-paragraph">Hello! I'm a designer and web developer from Puerto Rico now based in NYC. I believe design is visual engineering that should be used to communicate an important idea. When I work I always think about the content before the form. I've worked on design at places like <a class="contentlinks" href="http://artbinder.com">ArtBinder</a> and <a class="contentlinks" href="http://aliceapp.com">Alice</a>, and have recently launched an <a class="contentlinks" href="http://playarithmatic.com">app of my own</a>. I am skilled in UI/UX design, graphic design, illustration and front-end development. Outside of work I like webcomics, video games and good beer. <br><a class="contentlinks" href="mailto:agdelax@gmail.com">Hit me up</a> if you ever need a designer.</p>
 
+		</div>
+
 		<div id="lower-content">
+		<div style="width: 99%;">
 
 		<h3>Case Studies</h3>
 
