--- a/index.html
+++ b/index.html
@@ -221,6 +221,9 @@
 	#lower-content{
 		position: relative;
 		background-color: black;
+		max-width: 100%;
+		max-height: 100%;
+		display: block;
 		color: white;
 		padding: 0;
 		margin: 0;
