--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
 	#lower-content{
 		position: relative;
-		background-color: black;
+		/*background-color: black;*/
 		max-width: 100%;
 		max-height: 100%;
 		display: block;
