--- a/index.html
+++ b/index.html
@@ -218,6 +218,12 @@
 		padding: 10px;
 	}
 
+	#lower-content{
+		background-color: gray;
+		padding: 110%;
+		overflow: hidden;
+	}
+
 	@media (max-width: 700px){
 		#scroll-down{
 			left: auto;
@@ -277,6 +283,8 @@
 	<div id="content">
 		<p id="first-paragraph">Hello! I'm a designer and web developer from Puerto Rico now based in NYC. I believe design is visual engineering that should be used to communicate an important idea. When I work I always think about the content before the form. I've worked on design at places like <a class="contentlinks" href="http://artbinder.com">ArtBinder</a> and <a class="contentlinks" href="http://aliceapp.com">Alice</a>, and have recently launched an <a class="contentlinks" href="http://playarithmatic.com">app of my own</a>. I am skilled in UI/UX design, graphic design, illustration and front-end development. Outside of work I like webcomics, video games and good beer. <br><a class="contentlinks" href="mailto:agdelax@gmail.com">Hit me up</a> if you ever need a designer.</p>
 
+		<div id="lower-content">
+
 		<h3>Case Studies</h3>
 
 		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arithmatic.gif" class="image-responsive"> -->
@@ -331,6 +339,7 @@
 		<!-- <p><a class="contentlinks" href="/projects/american-classics/">An Anthology of American Classics</a>&mdash;Four works of classic American literature designed and bound into one volume.</p>
 		<p><a class="contentlinks" href="/projects/uss-maine/">USS Maine Memorial Booklet</a>&mdash;A booklet examining the history of the USS Maine and the monument built to commemorate it. Its destruction sparked the beginning of the Spanish-American War, as well as the birth of 'yellow journalism.'</p>
 		<p><a class="contentlinks" href="/projects/arroz-blanco/">Arroz Blanco</a>&mdash;A t-shirt and sticker line I developed and sold in Puerto Rico Comic Con. The brand is a blend of otaku and Puerto Rican culture.</p> -->
+	</div>
 	</div>
 
 	<script type="text/javascript">
