--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     max-width: 100%;
     margin: auto;
     font-size: 1.5em;
-    padding: 0 15px 30px 15px;
+    padding: 0;
     line-height: 1.7em;
 	}
 
