--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
 		max-width: 32%;
 		display: inline-block;
 		vertical-align: top;
+		background-color: white;
 	}
 
 	.case-study-text{
@@ -221,6 +222,7 @@
 	#lower-content{
 		background-color: gray;
 		overflow: hidden;
+		left: -10px;
 	}
 
 	@media (max-width: 700px){
