--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 	#lower-content{
 		background-color: gray;
 		overflow: hidden;
-		left: -40px;
+		margin-left: -40px;
 	}
 
 	@media (max-width: 700px){
