--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 		max-width: 200px;
 		max-height: 100%;
 		display: inline-block;
-		outline: 2px solid black;
+		border: 2px solid black;
 	}
 
 	/*.project-boxes-middle{
