--- a/index.html
+++ b/index.html
@@ -194,15 +194,7 @@
 		max-width: 200px;
 		max-height: 100%;
 		display: inline-block;
-		border: 2px solid black;
 	}
-
-	/*.project-boxes-middle{
-		max-width: 200px;
-		max-height: 100%;
-		display: inline-block;
-		margin: 0 65px;
-	}*/
 
 	#first-paragraph{
 		font-size: 1.6em; 
@@ -213,6 +205,8 @@
 		max-width: 32%;
 		display: inline-block;
 		vertical-align: top;
+		border: 2px solid black;
+		max-height: 300px;
 	}
 
 	.case-study-text{
@@ -237,9 +231,6 @@
 			display: none;
 		}
 
-		/*.project-boxes-middle{
-		margin: 0;
-	}*/
 	#first-paragraph{
 		font-size: 1em; 
 		line-height: 1.7em;
