--- a/index.html
+++ b/index.html
@@ -213,6 +213,13 @@
 		padding: 10px;
 	}
 
+	h4{
+		position: absolute;
+		bottom: 0;
+		text-transform: uppercase;
+		font-size: 0.5em;
+	}
+
 	@media (max-width: 700px){
 		#scroll-down{
 			left: auto;
@@ -269,21 +276,22 @@
 	<div id="content">
 		<p id="first-paragraph">Hello! I'm a designer and web developer from Puerto Rico now based in NYC. I believe design is visual engineering that should be used to communicate an important idea. When I work I always think about the content before the form. I've worked on design at places like <a class="contentlinks" href="http://artbinder.com">ArtBinder</a> and <a class="contentlinks" href="http://aliceapp.com">Alice</a>, and have recently launched an <a class="contentlinks" href="http://playarithmatic.com">app of my own</a>. I am skilled in UI/UX design, graphic design, illustration and front-end development. Outside of work I like webcomics, video games and good beer. <br><a class="contentlinks" href="mailto:agdelax@gmail.com">Hit me up</a> if you ever need a designer.</p>
 
-		<h3>Case Studies</h3>
-
 		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arithmatic.gif" class="image-responsive"> -->
 		<div class="case-study-box">
 			<p class="case-study-text"><a class="contentlinks" href="/projects/arithmatic/">Arithmatic</a>&mdash;An educational mobile game for iPhone, players must solve arithmetic questions as quickly as possible and compete in leaderboards.</p>
+			<h4>Case Study</h4>
 		</div>
 
 		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/artbinder.gif" class="image-responsive"> -->
 		<div class="case-study-box">
 			<p class="case-study-text"><a class="contentlinks" href="/projects/artbinder-personas/">ArtBinder Personas</a>&mdash;Persona development and user research for the large range of ArtBinder's customers and products.</p>
+			<h4>Case Study</h4>
 		</div>
 
 		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/alice-crm.gif" class="image-responsive"> -->
 		<div class="case-study-box">
 			<p class="case-study-text"><a class="contentlinks" href="/projects/alice-crm/">Alice Concierge CRM</a>&mdash;A customer relationship management system designed for hotel concierge as a part of Alice's backend hotel management solution.</p>
+			<h4>Case Study</h4>
 		</div>
 
 		<h3>Coded Work<span id="gists">&mdash;<a class="contentlinks" href="http://bl.ocks.org/AGdelaX">Check out my gists.</a></span></h3>
