--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 		display: inline-block;
 		vertical-align: top;
 		border: 2px solid black;
-		max-height: 300px;
+		height: 300px;
 	}
 
 	.case-study-text{
