--- a/index.html
+++ b/index.html
@@ -216,9 +216,11 @@
 
 	h4{
 		position: absolute;
-		bottom: 0;
+		bottom: -10px;
+		left: 10px;
 		text-transform: uppercase;
 		font-size: 0.5em;
+		font-weight: 400;
 	}
 
 	@media (max-width: 700px){
