--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 		display: inline-block;
 		vertical-align: top;
 		border: 2px solid black;
-		height: 300px;
+		min-height: 300px;
 	}
 
 	.case-study-text{
