--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
 	.case-study-text{
 		padding: 10px;
-		margin: 0;
+		margin: 0 0 10px 0;
 	}
 
 	h4{
@@ -222,7 +222,6 @@
 		text-transform: uppercase;
 		font-size: 0.5em;
 		font-weight: 600;
-		margin-top: 10px;
 	}
 
 	@media (max-width: 700px){
