--- a/index.html
+++ b/index.html
@@ -224,6 +224,12 @@
 		font-weight: 600;
 	}
 
+	@media (max-width: 950px){
+		.case-study-box{
+			min-height: 500px;
+		}
+	}
+
 	@media (max-width: 700px){
 		#scroll-down{
 			left: auto;
