--- a/index.html
+++ b/index.html
@@ -311,38 +311,33 @@
 			<h4>Case Study</h4>
 		</div>
 
-		<h3>Coded Work<span id="gists">&mdash;<a class="contentlinks" href="http://bl.ocks.org/AGdelaX">Check out my gists.</a></span></h3>
+		<!-- <h3>Coded Work<span id="gists">&mdash;<a class="contentlinks" href="http://bl.ocks.org/AGdelaX">Check out my gists.</a></span></h3> -->
 
 		<div class="project-boxes">
 			<a href="/projects/divpixels/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/pikachu-icon.gif"></a>
 			<p class="mini"><a href="/projects/divpixels/" class="contentlinks">divPixels</a></p>
+			<h4>Coded Work</h4>
 		</div>
 		<div class="project-boxes">
 			<a href="/projects/whitewithred/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/white-with-red-icon.gif"></a>
 			<p class="mini"><a href="/projects/whitewithred/" class="contentlinks">White with Red</a></p>
+			<h4>Coded Work</h4>
 		</div>
 
-		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/divpixels.gif" class="image-responsive"> -->
-		<!-- <p><a class="contentlinks" href="/projects/divpixels/">divPixels</a>&mdash;A free to use, browser-based pixel art tool for quickly developing pixel drawings.</p> -->
-
-		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/white-with-red.gif" class="image-responsive"> -->
-		<!-- <p><a class="contentlinks" href="/projects/whitewithred/">White with Red</a>&mdash;A series of illustrations and web animations based on the short horror story of the same name.</p> -->
-
-		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/koloni.gif" class="image-responsive">
-		<p><a class="contentlinks" href="/projects/koloni">Koloni</a>&mdash;Branding and UI design for a concept microfinance app.</p> -->
-
-		<h3>Printed Work</h3>
 		<div class="project-boxes">
 			<a href="/projects/american-classics/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/ben-franklin-icon.gif"></a>
 			<p class="mini"><a href="/projects/american-classics/" class="contentlinks">American Classics</a></p>
+			<h4>Printed Work</h4>
 		</div>
 		<div class="project-boxes">
 			<a href="/projects/uss-maine/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/uss-maine-icon.jpg"></a>
 			<p class="mini"><a href="/projects/uss-maine/" class="contentlinks">USS Maine Booklet</a></p>
+			<h4>Printed Work</h4>
 		</div>
 		<div class="project-boxes">
 			<a href="/projects/arroz-blanco/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arroz-icon.gif"></a>
 			<p class="mini"><a href="/projects/arroz-blanco/" class="contentlinks">Arroz Blanco</a></p>
+			<h4>Printed Work</h4>
 		</div>
 
 		<!-- <p><a class="contentlinks" href="/projects/american-classics/">An Anthology of American Classics</a>&mdash;Four works of classic American literature designed and bound into one volume.</p>
