--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
 
 	.project-boxes{
 		max-width: 200px;
-		max-height: 100%;
 		display: inline-block;
 		border: 2px solid black;
+		position: relative;
 	}
 
 	#first-paragraph{
@@ -319,6 +319,7 @@
 			<p class="mini"><a href="/projects/divpixels/" class="contentlinks">divPixels</a></p>
 			<h4>Coded Work</h4>
 		</div>
+
 		<div class="project-boxes">
 			<a href="/projects/whitewithred/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/white-with-red-icon.gif"></a>
 			<p class="mini"><a href="/projects/whitewithred/" class="contentlinks">White with Red</a></p>
@@ -330,11 +331,13 @@
 			<p class="mini"><a href="/projects/american-classics/" class="contentlinks">American Classics</a></p>
 			<h4>Printed Work</h4>
 		</div>
+
 		<div class="project-boxes">
 			<a href="/projects/uss-maine/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/uss-maine-icon.jpg"></a>
 			<p class="mini"><a href="/projects/uss-maine/" class="contentlinks">USS Maine Booklet</a></p>
 			<h4>Printed Work</h4>
 		</div>
+
 		<div class="project-boxes">
 			<a href="/projects/arroz-blanco/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arroz-icon.gif"></a>
 			<p class="mini"><a href="/projects/arroz-blanco/" class="contentlinks">Arroz Blanco</a></p>
