--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 	.mini{
 		font-size: 0.8em;
 		line-height: 1.5em;
-		margin-top: -5px;
+		margin: 0 0 -20px 0;
 	}
 
 	#gists{
@@ -195,8 +195,7 @@
 		display: inline-block;
 		border: 2px solid black;
 		position: relative;
-		margin: 20px 0;
-		height: 120%;
+		margin: 20px 20px;
 	}
 
 	#first-paragraph{
