--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 		display: inline-block;
 		border: 2px solid black;
 		position: relative;
-		margin: 20px 20px;
+		margin: 20px 0 0 20px;
 	}
 
 	#first-paragraph{
