--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
 	.case-study-box{
 		max-width: 99%;
-		min-height: 100%;
+		min-height: 250px;
 		padding-bottom: 20px;
 		margin: 10px 0;
 	}
