--- a/index.html
+++ b/index.html
@@ -255,6 +255,11 @@
 		line-height: 1.7em;
 	}
 
+	.project-boxes{
+		max-width: 99%;
+		min-height: 200px;
+	}
+
 	.case-study-box{
 		max-width: 99%;
 		min-height: 250px;
