--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
 	}
 
 	.project-boxes{
-		max-width: 99%;
+		width: 99%;
 		min-height: 200px;
-		margin: 0;
+		margin: 10px 0;
 	}
 
 	.case-study-box{
