--- a/index.html
+++ b/index.html
@@ -261,6 +261,11 @@
 		margin: 10px 0;
 	}
 
+	.project-img{
+		position: absolute;
+		right: 0;
+	}
+
 	.case-study-box{
 		max-width: 99%;
 		min-height: 250px;
@@ -322,31 +327,31 @@
 		<!-- <h3>Coded Work<span id="gists">&mdash;<a class="contentlinks" href="http://bl.ocks.org/AGdelaX">Check out my gists.</a></span></h3> -->
 
 		<div class="project-boxes">
-			<a href="/projects/divpixels/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/pikachu-icon.gif"></a>
+			<a href="/projects/divpixels/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/pikachu-icon.gif" class="project-img"></a>
 			<p class="mini"><a href="/projects/divpixels/" class="contentlinks">divPixels</a></p>
 			<h4>Coded Work</h4>
 		</div>
 
 		<div class="project-boxes">
-			<a href="/projects/whitewithred/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/white-with-red-icon.gif"></a>
+			<a href="/projects/whitewithred/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/white-with-red-icon.gif" class="project-img"></a>
 			<p class="mini"><a href="/projects/whitewithred/" class="contentlinks">White with Red</a></p>
 			<h4>Coded Work</h4>
 		</div>
 
 		<div class="project-boxes">
-			<a href="/projects/american-classics/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/ben-franklin-icon.gif"></a>
+			<a href="/projects/american-classics/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/ben-franklin-icon.gif" class="project-img"></a>
 			<p class="mini"><a href="/projects/american-classics/" class="contentlinks">American Classics</a></p>
 			<h4>Printed Work</h4>
 		</div>
 
 		<div class="project-boxes">
-			<a href="/projects/uss-maine/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/uss-maine-icon.jpg"></a>
+			<a href="/projects/uss-maine/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/uss-maine-icon.jpg" class="project-img"></a>
 			<p class="mini"><a href="/projects/uss-maine/" class="contentlinks">USS Maine Booklet</a></p>
 			<h4>Printed Work</h4>
 		</div>
 
 		<div class="project-boxes">
-			<a href="/projects/arroz-blanco/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arroz-icon.gif"></a>
+			<a href="/projects/arroz-blanco/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arroz-icon.gif" class="project-img"></a>
 			<p class="mini"><a href="/projects/arroz-blanco/" class="contentlinks">Arroz Blanco</a></p>
 			<h4>Printed Work</h4>
 		</div>
