--- a/index.html
+++ b/index.html
@@ -256,15 +256,15 @@
 	}
 
 	.project-boxes{
-		max-width: 700px;
+		max-width: 80%;
 		min-height: 200px;
 		margin: 10px 0;
 	}
 
-	.project-img{
+	/*.project-img{
 		position: absolute;
 		right: 0;
-	}
+	}*/
 
 	.case-study-box{
 		max-width: 99%;
