--- a/index.html
+++ b/index.html
@@ -340,13 +340,13 @@
 
 		<div class="project-boxes">
 			<a href="/projects/american-classics/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/ben-franklin-icon.gif" class="project-img"></a>
-			<p class="mini"><a href="/projects/american-classics/" class="contentlinks">American Classics</a></p>
+			<p class="mini"><a href="/projects/american-classics/" class="contentlinks">An Anthology of American Classics</a></p>
 			<h4>Printed Work</h4>
 		</div>
 
 		<div class="project-boxes">
 			<a href="/projects/uss-maine/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/uss-maine-icon.jpg" class="project-img"></a>
-			<p class="mini"><a href="/projects/uss-maine/" class="contentlinks">USS Maine Booklet</a></p>
+			<p class="mini"><a href="/projects/uss-maine/" class="contentlinks">USS Maine Memorial Booklet</a></p>
 			<h4>Printed Work</h4>
 		</div>
 
