--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
 		display: none;
 	}
 	.mini{
-		font-size: 0.8em;
-		line-height: 1.5em;
+		font-size: 1em;
 		padding: 10px;
+		position: absolute;
 	}
 
 	#gists{
