--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
 		position: relative;
 		margin: 20px 20px 0 0;
 		min-height:300px;
+		vertical-align: top;
 	}
 
 	#first-paragraph{
@@ -259,9 +260,10 @@
 	}
 
 	.project-boxes{
-		width: 700px;
+		max-width: 700px;
 		min-height: 200px;
 		margin: 10px 0;
+		display: block;
 	}
 
 	/*.project-img{
