--- a/index.html
+++ b/index.html
@@ -193,12 +193,12 @@
 	}
 
 	.project-boxes{
-		max-width: 200px;
+		max-width: 99%;
 		display: inline-block;
 		border: 2px solid black;
 		position: relative;
 		margin: 20px 20px 0 0;
-		min-height:300px;
+		min-height:100px;
 		vertical-align: top;
 	}
 
@@ -228,6 +228,11 @@
 		text-transform: uppercase;
 		font-size: 0.5em;
 		font-weight: 600;
+	}
+	.project-img{
+		position: absolute;
+		right: 0;
+		height: 100px;
 	}
 
 	@media (max-width: 950px){
