--- a/index.html
+++ b/index.html
@@ -193,13 +193,18 @@
 	}
 
 	.project-boxes{
-		max-width: 200px;
+		max-width: 20000px;
 		display: inline-block;
 		border: 2px solid black;
 		position: relative;
 		margin: 20px 20px 0 0;
-		min-height:300px;
+		min-height:100px;
 		vertical-align: top;
+	}
+	.project-img{
+		position: absolute;
+		right: 0;
+		height: 100px;
 	}
 
 	#first-paragraph{
