--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
 
 	#project-boxes-container{
 		text-align: justify;
+		margin-top: 70px;
 	}
 
 	.project-boxes{
@@ -264,6 +265,7 @@
 	#first-paragraph{
 		font-size: 1em; 
 		line-height: 1.7em;
+		margin-bottom: 100px;
 	}
 	.case-study-box{
 		max-width: 99%;
