--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 	#scroll-down{
 		position: absolute;
 		top: 83%;
-		font-size: 7vmin;
+		font-size: 2em;
 		left: 2vmin;
 		text-align: center;
 	}
