--- a/index.html
+++ b/index.html
@@ -151,9 +151,10 @@
 	#scroll-down{
 		position: absolute;
 		top: 83%;
-		font-size: 2em;
+		font-size: 1em;
 		left: 2vmin;
 		text-align: center;
+		text-transform: uppercase;
 	}
 
 	.nav{
