--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
 	#scroll-down{
 		position: absolute;
 		top: 83%;
-		font-size: 1em;
+		font-size: 1.5em;
+		font-weight: 600;
 		left: 2vmin;
 		text-align: center;
 		text-transform: uppercase;
