--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 	#scroll-down{
 		position: absolute;
 		top: 85%;
-		font-size: 2.5em;
+		font-size: 1em;
 		font-weight: 400;
 		left: 2vmin;
 		text-align: center;
@@ -320,7 +320,7 @@
       </div>
       <!-- ____________________ -->
 
-      <p id="scroll-down"><span style="font-size: 1em;">Scroll</span><br>&darr;</p>
+      <p id="scroll-down">Scroll<br><span style="font-size: 2.5em;">&darr;</span></p>
 	</div>
 	<div id="content">
 		<p id="first-paragraph">Hello! I'm a designer and web developer from Puerto Rico now based in NYC. I believe design is visual engineering. When I work I always think about the content before the form. I've worked on design at places like <a class="contentlinks" href="http://artbinder.com">ArtBinder</a> and <a class="contentlinks" href="http://aliceapp.com">Alice</a>, and have recently launched an <a class="contentlinks" href="http://playarithmatic.com">app of my own</a>. I am skilled in UI/UX design, graphic design, illustration and front-end development. Outside of work I like webcomics, video games and good beer. <br><a class="contentlinks" href="mailto:agdelax@gmail.com">Hit me up</a> if you ever need a designer.</p>
