--- a/index.html
+++ b/index.html
@@ -185,10 +185,6 @@
 		font-weight: 400;
 	}
 
-	.image-responsive{
-		width: 100%;
-	}
-
 	#project-boxes-container{
 		text-align: justify;
 		margin-top: 70px;
@@ -221,11 +217,18 @@
 
 	.case-study-box{
 		position: relative;
-		max-width: 32%;
+		max-width: 99;
 		display: inline-block;
 		vertical-align: top;
 		border: 2px solid black;
-		min-height: 350px;
+		/*min-height: 350px;*/
+	}
+
+	.image-responsive{
+		width: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
 	}
 
 	.case-study-text{
@@ -325,20 +328,23 @@
 	<div id="content">
 		<p id="first-paragraph">Hello! I'm a designer and web developer from Puerto Rico now based in NYC. I believe design is visual engineering. When I work I always think about the content before the form. I've worked on design at places like <a class="contentlinks" href="http://artbinder.com">ArtBinder</a> and <a class="contentlinks" href="http://aliceapp.com">Alice</a>, and have recently launched an <a class="contentlinks" href="http://playarithmatic.com">app of my own</a>. I am skilled in UI/UX design, graphic design, illustration and front-end development. Outside of work I like webcomics, video games and good beer. <br><a class="contentlinks" href="mailto:agdelax@gmail.com">Hit me up</a> if you ever need a designer.</p>
 
-		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arithmatic.gif" class="image-responsive"> -->
-		<div class="case-study-box">
+	
+		<div class="case-study-box">	
+			<img src="https://s3.amazonaws.com/playarithmatic.com/add-phones.png" class="image-responsive">
 			<p class="case-study-text"><a class="contentlinks" href="/projects/arithmatic/">Arithmatic</a>&mdash;An educational mobile game for iPhone, players must solve arithmetic questions as quickly as possible and compete in leaderboards.</p>
 			<h4>Case Study</h4>
 		</div>
 
-		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/artbinder.gif" class="image-responsive"> -->
+		
 		<div class="case-study-box">
+			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/artbinder.gif" class="image-responsive">
 			<p class="case-study-text"><a class="contentlinks" href="/projects/artbinder-personas/">ArtBinder Personas</a>&mdash;Persona development and user research for the large range of ArtBinder's customers and products.</p>
 			<h4>Case Study</h4>
 		</div>
 
-		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/alice-crm.gif" class="image-responsive"> -->
+		
 		<div class="case-study-box">
+			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/alice-crm.gif" class="image-responsive">
 			<p class="case-study-text"><a class="contentlinks" href="/projects/alice-crm/">Alice Concierge CRM</a>&mdash;A customer relationship management system designed for hotel concierge as a part of Alice's backend hotel management solution.</p>
 			<h4>Case Study</h4>
 		</div>
