--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 
 		<div id="arithmatic-section" style="position: relative;width: 100%;display: inline-block;height: 600px;border:2px solid black;">
 			<img src="https://s3.amazonaws.com/playarithmatic.com/add-phones.png" style="max-width: 30%;position: absolute;right: 0;">
-			<div style="max-width: 50%;position: absolute;left: 0;">
+			<div style="max-width: 50%;position: absolute;left: 0; padding: 30px;">
 				<h2>Arithmatic</h2>
 				<p>An educational mobile game for iPhone, players must solve arithmetic questions as quickly as possible and compete in leaderboards.</p>
 				<a href="/projects/arithmatic/">View Case Study</a>
