--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 			<div style="max-width: 50%;position: absolute;left: 0; padding: 30px;">
 				<h2>Arithmatic</h2>
 				<p>An educational mobile game for iPhone, players must solve arithmetic questions as quickly as possible and compete in leaderboards.</p>
-				<a href="/projects/arithmatic/">View Case Study</a>
+				<a href="/projects/arithmatic/" class="contentlinks">View Case Study</a>
 			</div>
 		</div>
 
