--- a/index.html
+++ b/index.html
@@ -207,6 +207,10 @@
 		zoom: 1;
 	}
 
+	.project-img{
+		width: 200px;
+	}
+
 	#project-boxes-container:after{
 		content: "";
 		width: 100%;
@@ -359,7 +363,7 @@
 		</div>
 
 		<div class="project-boxes">
-			<a href="/projects/whitewithred/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/white-with-red.jpg" style="width: 200px;"class="project-img"></a>
+			<a href="/projects/whitewithred/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/white-with-red.jpg" class="project-img"></a>
 			<p class="mini"><a href="/projects/whitewithred/" class="contentlinks">White with Red</a></p>
 			<h4>Coded Work</h4>
 		</div>
@@ -378,7 +382,7 @@
 
 		<div class="project-boxes">
 			<a href="/projects/arroz-blanco/"><img src="	
-			https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arroz-blanco.jpg" style="width:200px;" class="project-img"></a>
+			https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arroz-blanco.jpg"  class="project-img"></a>
 			<p class="mini"><a href="/projects/arroz-blanco/" class="contentlinks">Arroz Blanco</a></p>
 			<h4>Printed Work</h4>
 		</div>
