--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 		.case-study-box{
 			min-height: 500px;
 		}
-		
+
 		#arithmatic-text{
 		top: 20px;
 		}
@@ -307,7 +307,7 @@
 	}
 
 	#arithmatic-section{
-		height: 1100px;
+		min-height: 1100px;
 	}
 
 	#arithmatic-img{
