--- a/index.html
+++ b/index.html
@@ -230,11 +230,12 @@
 		vertical-align: top;
 		border: 2px solid black;
 		min-height: 150px;
+		margin: 20px 0;
 	}
 
-	.case-study-text{
+	/*.case-study-text{
 		padding: 10px;
-		margin: 0 0 20px 0;
+		margin: 0 0 20px 0;*/
 	}
 
 	h4{
@@ -246,11 +247,11 @@
 		font-weight: 600;
 	}
 
-	@media (max-width: 950px){
+	/*@media (max-width: 950px){
 		.case-study-box{
 			min-height: 500px;
 		}
-	}
+	}*/
 
 	@media (max-width: 750px){
 		#scroll-down{
