--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@
 		margin: 20px 0;
 	}
 
-	/*.case-study-text{
+	.case-study-text{
 		padding: 10px;
-		margin: 0 0 20px 0;*/
+		margin: 0 0 20px 0;
 	}
 
 	h4{
