--- a/index.html
+++ b/index.html
@@ -172,13 +172,13 @@
 	#menubutton{
 		display: none;
 	}
-	.mini{
+	/*.mini{
 		padding: 10px;
 		font-size: 0.7em;
 		line-height: 1.5em;
 		position: absolute;
 		bottom: 10px;
-	}
+	}*/
 
 	#gists{
 		font-size: 1em;
