--- a/index.html
+++ b/index.html
@@ -180,25 +180,25 @@
 		bottom: 10px;
 	}*/
 
-	#project-boxes-container{
+/*	#project-boxes-container{
 		text-align: justify;
 		margin-top: 70px;
-	}
+	}*/
 
 	.project-boxes{
-		max-width: 200px;
+		max-width: 49%;
 		display: inline-block;
 		border: 2px solid black;
 		position: relative;
 		margin:20px 0 0 0;
-		min-height:300px;
+		min-height:500px;
 		vertical-align: top;
-		text-align: left;
+/*		text-align: left;
 		*display: inline;
-		zoom: 1;
+		zoom: 1;*/
 	}
 
-	.project-img{
+/*	.project-img{
 		width: 200px;
 	}
 
@@ -206,7 +206,7 @@
 		content: "";
 		width: 100%;
 		display: inline-block;
-	}
+	}*/
 
 	#first-paragraph{
 		font-size: 1.6em; 
@@ -268,7 +268,7 @@
 	}*/
 	.project-boxes{
 		max-width: 700px;
-		min-height: 100px;
+		min-height: 500px;
 		margin: 10px 0;
 		display: block;
 	}
@@ -333,38 +333,19 @@
 			<h4>Case Study</h4>
 			<p class="case-study-text"><a class="contentlinks" href="/projects/alice-crm/">Alice Concierge CRM</a>&mdash;A customer relationship management system designed for hotel concierge as a part of Alice's backend hotel management solution.</p>
 		</div>
-<div id="project-boxes-container">
+
 		<div class="project-boxes">
-			<a href="/projects/divpixels/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/pikachu-icon.gif" class="project-img"></a>
-			<p class="mini"><a href="/projects/divpixels/" class="contentlinks">divPixels</a></p>
 			<h4>Coded Work</h4>
+			<p><a href="/projects/divpixels/" class="contentlinks">divPixels</a>&mdash;A customer relationship management system designed for hotel concierge as a part of Alice's backend hotel management solution.</p>
+			<p><a href="/projects/whitewithred/" class="contentlinks">White with Red</a>&mdash;A customer relationship management system designed for hotel concierge as a part of Alice's backend hotel management solution.</p>
 		</div>
 
 		<div class="project-boxes">
-			<a href="/projects/whitewithred/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/white-with-red.jpg" class="project-img"></a>
-			<p class="mini"><a href="/projects/whitewithred/" class="contentlinks">White with Red</a></p>
-			<h4>Coded Work</h4>
-		</div>
-
-		<div class="project-boxes">
-			<a href="/projects/american-classics/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/ben-franklin-icon.gif" class="project-img"></a>
-			<p class="mini"><a href="/projects/american-classics/" class="contentlinks">An Anthology of American Classics</a></p>
 			<h4>Printed Work</h4>
+			<p><a href="/projects/american-classics/" class="contentlinks">An Anthology of American Classics</a>&mdash;A customer relationship management system designed for hotel concierge as a part of Alice's backend hotel management solution.</p>
+			<p class="mini"><a href="/projects/uss-maine/" class="contentlinks">USS Maine Memorial Booklet</a>&mdash;A customer relationship management system designed for hotel concierge as a part of Alice's backend hotel management solution.</p>
+			<p class="mini"><a href="/projects/arroz-blanco/" class="contentlinks">Arroz Blanco</a>&mdash;A customer relationship management system designed for hotel concierge as a part of Alice's backend hotel management solution.</p>
 		</div>
-
-		<div class="project-boxes">
-			<a href="/projects/uss-maine/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/uss-maine-icon.jpg" class="project-img"></a>
-			<p class="mini"><a href="/projects/uss-maine/" class="contentlinks">USS Maine Memorial Booklet</a></p>
-			<h4>Printed Work</h4>
-		</div>
-
-		<div class="project-boxes">
-			<a href="/projects/arroz-blanco/"><img src="	
-			https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arroz-blanco.jpg"  class="project-img"></a>
-			<p class="mini"><a href="/projects/arroz-blanco/" class="contentlinks">Arroz Blanco</a></p>
-			<h4>Printed Work</h4>
-		</div>
-	</div>	
 
 	</div>
 
