--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 	}*/
 
 	.project-boxes{
-		max-width: 49%;
+		width: 49%;
 		display: inline-block;
 		border: 2px solid black;
 		position: relative;
