--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@
 			<p class="case-study-text"><a href="/projects/arroz-blanco/" class="contentlinks">Arroz Blanco</a>&mdash;A t-shirt and sticker line made for Puerto Rico Comic-Con, designed as a cross between Puerto Rican and otaku culture.</p>
 		</div>
 
+		<p>Designed and coded by Alberto Guillermo de la Cruz</p>
 	</div>
 
 	<script type="text/javascript">
