--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
 	}
 
 	.project-boxes{
-		max-width: 48%;
+		max-width: 49%;
 		display: inline-block;
 		border: 2px solid black;
 		position: relative;
-		margin:15px 0 0 0;
+		margin:0;
 		vertical-align: top;
 	}
 
@@ -293,7 +293,7 @@
 			<p class="case-study-text"><a class="contentlinks" href="/projects/alice-crm/">Alice Concierge CRM</a>&mdash;A customer relationship management system designed for hotel concierge as a part of Alice's backend hotel management solution.</p>
 		</div>
 
-		<div class="project-boxes" style="margin-right: 15px;">
+		<div class="project-boxes">
 			<h4>Coded Work</h4>
 			<p class="case-study-text"><a href="/projects/divpixels/" class="contentlinks">divPixels</a>&mdash;An easy to use, browser-based pixel art tool, built as a weekend project in JavaScript.</p>
 			<p class="case-study-text"><a href="/projects/whitewithred/" class="contentlinks">White with Red</a>&mdash;Illustrations accompanying a short horror story of the same name, made interactive and built with SVG animations.</p>
