--- a/index.html
+++ b/index.html
@@ -148,15 +148,6 @@
 		max-width: 2.5em;
 		z-index: 21;
 	}
-	#scroll-down{
-		position: absolute;
-		top: 88%;
-		font-size: 0.8em;
-		font-weight: 600;
-		left: 2vmin;
-		text-align: center;
-		text-transform: uppercase;
-	}
 
 	.nav{
 		display: inline-block;
@@ -245,6 +236,18 @@
 		width: 100px;
 	}
 
+	}
+
+	@media (max-width: 600px){
+		#scroll-down{
+		position: absolute;
+		top: 88%;
+		font-size: 0.8em;
+		font-weight: 600;
+		left: 2vmin;
+		text-align: center;
+		text-transform: uppercase;
+	}
 	}
 	</style>
 </head>
