--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 			<p class="case-study-text"><a href="/projects/divpixels/" class="contentlinks">divPixels</a>&mdash;An easy to use, browser-based pixel art tool, built as a weekend project in JavaScript.</p>
 			<p class="case-study-text"><a href="/projects/whitewithred/" class="contentlinks">White with Red</a>&mdash;Illustrations accompanying a short horror story of the same name, made interactive and built with SVG animations.</p>
 			<p class="case-study-text"><a href="http://bl.ocks.org/AGdelaX/raw/5f3982201cfff21e631d/" class="contentlinks">NYC Vehicle Collisions 2014</a>&mdash;An interactive map of NYC plotting vehicles collisions by victim type, time and location. Built with D3 and Leaflet.</p>
-			<p class="case-study-text"><a href="http://bl.ocks.org/AGdelaX/" class="contentlinks">Check out my gists</a></p>
+			<p class="case-study-text"><a href="http://bl.ocks.org/AGdelaX/" class="contentlinks">Check out my gists.</a></p>
 		</div>
 
 		<div class="project-boxes">
