--- a/projects/arithmatic/index.html
+++ b/projects/arithmatic/index.html
@@ -142,6 +142,7 @@
 <p>Originally developed as a project for one of my classes, I decided to take the concept behind Arithmatic and develop it into a full game. Players are presented with an arithmetic problem, and they are given 5 seconds to answer that problem, either by swiping or tapping the correct answer.</p>
 <img src="  
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 350px;">
+<p>The menu screen requires users to swipe or tap on the option they want to go to. This interaction is identical to how users would interact with the app during gameplay. This was done to reduce the need for a standard tutorial and help users grasp the gameplay controls very quickly.</p>
 <p>In order to help users quickly analyze and solve the problems being presented, I developed a color coded system where each function is represented by its own color:</p>
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/add.png" style="max-width: 350px;">
 <p>Red for Addition</p>
