--- a/index.html
+++ b/index.html
@@ -384,8 +384,8 @@
    		document.getElementById('links').style.fontSize = "4.3vmin";
 		}
 
-		new CircleType(document.getElementById('name'));
-		new CircleType(document.getElementById('links'));
+		$('#name').circleType();
+		$('#links').circleType();
 
 		$('#linksdown').hide();
 		$('#navbar').hide();
