--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 		-o-animation-duration: 30s;
 		-o-animation-iteration-count: infinite;
 		-o-animation-timing-function: linear;
-		height: 105vmin;
-		width: 105vmin;
+		height: 105vmin !important;
+		width: 105vmin !important;
 		position: absolute;
 	}
 
@@ -81,8 +81,8 @@
 		animation-duration: 60s;
 		animation-iteration-count: infinite;
 		animation-timing-function: linear;
-		height: 65vmin;
-		width: 65vmin;
+		height: 65vmin !important;
+		width: 65vmin !important;
 	}
 
 	#linksdown{
