--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 		animation-timing-function: linear;
 		height: 65vmin !important;
 		width: 65vmin !important;
+		position: absolute !important;
 	}
 
 	#linksdown{
