--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 		height: 105vmin !important;
 		width: 105vmin !important;
 		position: absolute !important;
+		margin: 0;
 	}
 
 	#links{
@@ -84,6 +85,7 @@
 		height: 65vmin !important;
 		width: 65vmin !important;
 		position: absolute !important;
+		margin: 0;
 	}
 
 	#linksdown{
